# LogInsight

./: .gitignore  README.md  config.py  inference.py  main.py  pyproject.toml  reference.md
core/: fine_tuning.py  fols.py  knowledge_injection.py  log_knowledge_embed.py  preprocessing.py
data/knowledge_base/: log_diagnosis_dataset.json  log_diagnosis_dataset.jsonl  log_knowledge.jsonl  log_knowledge_vectors.data
data/raw_logs/: raw_logs.txt
utils/: log_generator.py
