[project]
name = "loginsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "openai>=1.100.1",
    "peft>=0.17.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
