[project]
name = "loginsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.38",
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "openai>=1.100.1",
    "peft>=0.17.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
